# Intra_vehicle_wireless_harness_communication

./: .gitmodules  CMakeLists.txt  README.md
BBB_and_QT/: README.md
BBB_and_QT/BBB_codes/: BBBUartCpp  BBBUartCpp.cpp  README.md  commandToBuildCpp.txt  jsonFileBBB.json  pyACDWithJSON.py  pyADCTest.py  pyBBBTest.py  pyBBBUart.py  pyJSONTest.py  runPython.sh
BBB_and_QT/QT_project/: Car_1.pro  README.md  main.cpp  main.qml  qml.qrc  radialbar.cpp  radialbar.h
BBB_and_QT/QT_project/Car-Dashboard/: Car_1.pro  Car_1.pro.user.9c9347d  main.cpp  main.qml  qml.qrc  radialbar.cpp  radialbar.h
BBB_and_QT/QT_project/Car-Dashboard/get_data/: file_reader.cpp  file_reader.h  jsonreader.h
BBB_and_QT/QT_project/get_data/: jsonreader.cpp
ECU_systems/: .gitmodules
ECU_systems/common_lib/pico-sdk/: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  pico_sdk_init.cmake  pico_sdk_version.cmake
PCB_layout/Client_1/: PCB_Client_1_PCB_2024-06-21.json  SCH_Client_1_2024-06-13.json
PCB_layout/Client_2/: PCB_Client_2_PCB_2024-06-21.json  SCH_Client_2_2024-06-13.json
PCB_layout/Server_1/: PCB_server_1_PCB_2024-06-21.json  SCH_Server_1_2024-06-13.json
PCB_layout/Server_2/: PCB_Server_2_PCB_2024-06-21.json  SCH_Server_2_2024-06-13.json
Pico_systems_and_BLE_Network/: README.md
Pico_systems_and_BLE_Network/pico-examples/: CMakeLists.txt
lib/FreeRTOS-Kernel/: tasks.c
src/: CMakeLists.txt  bridge_common.c  btstack_config.h  client_common.c  le_peripheral.gatt  main.c  server_common.c  server_common.h  temp_sensor.gatt
(+433 files in other folders)
